--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<a href="http://www.wandoujia.com/apps/com.water.fiction"><img src="images/fiction_logo.png" title="玄幻言情" /></a>
 					<p>玄幻言情小说给你不一样的阅读体验!</p>
 					<ul class="big-btns">
-						<li><a class="btn-g" href="http://www.wandoujia.com/apps/com.water.fiction">点击下载</a></li>
+						<li><a class="btn-g" href="/download/app-release.apk">点击下载</a></li>
 					</ul>
 				</div>
 			</div>
